--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 ktor_version=1.6.8
 kotlin_version=1.6.20
 logback_version=1.2.3
+koin_version=3.1.6
 kotlin.code.style=official
 prometeus_version=1.6.3
