--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,5 @@
-ktor_version=1.6.8
+ktor_version=2.0.0-beta-1
 kotlin_version=1.6.20
 logback_version=1.2.3
 koin_version=3.1.6
 kotlin.code.style=official
-prometeus_version=1.6.3
